--- a/food/breakfast.html
+++ b/food/breakfast.html
@@ -52,10 +52,10 @@ mysql_select_db("hotel");
 <div class = "body_2_breakfast">
 
 <div class="room_border">
-  <form method="POST">
+  <form action = "process_breakfast.php" method="POST">
 	<p><input type="checkbox" name="selection" value="Farmers Breakfast" class = "squaredTwo"><h2>1.Farmers Breakfast</h2><h3>(Scrambled eggs, patty sausage and hash browns)</h3></p>
   <img src="../img/Breakfast/german-farmers-breakfast.jpg">
-  <p>Price: plate</p>
+  <p>Price: <?php $rr = mysql_query("SELECT * FROM food_breakfast WHERE name ='Farmers Breakfast' "); $rr_row = mysql_fetch_array($rr); echo "".$rr_row['price'];  ?>/plate</p>
   <p>
   <input type="number" name="number" min=0 value="0" class = "opt"/>
   </p>
@@ -65,10 +65,10 @@ mysql_select_db("hotel");
    
 
   <div class = "room_border_1">
-  <form method="POST">
+  <form action = "process_breakfast.php" method="POST">
 	<p><input type="checkbox" name="selection" value="French Toast" class = "squaredTwo"><h2>2.French Toast</h2><h3>(French toast served with bacon and fresh fruit medley)</h3></p>
    <img src="../img/Breakfast/French toast served with bacon and fresh fruit medley.jpg">
-  <p>Price: plate</p>
+  <p>Price: <?php $rr = mysql_query("SELECT * FROM food_breakfast WHERE name ='French Toast' "); $rr_row = mysql_fetch_array($rr); echo "".$rr_row['price'];  ?>/plate</p>
   <p>
   <input type="number" name="number" min=0 value="0" class = "opt" />
   </p>
@@ -78,10 +78,10 @@ mysql_select_db("hotel");
 
 
   <div class="room_border">
-  <form method="POST">
+  <form action = "process_breakfast.php" method="POST">
 	<p><input type="checkbox" name="selection" value="Healthy Plate" class = "squaredTwo"><h2>3.Healthy Plate</h2><h3>(Assorted yogurt, your choice of granola or oat bran muffin and fresh fruit medley)</h3></p>
   <img src="../img/Breakfast/Assorted yogurt, your choice of granola or oat bran muffin and fresh fruit medley).jpg">
-  <p>Price: plate</p>
+  <p>Price:<?php $rr = mysql_query("SELECT * FROM food_breakfast WHERE name ='Healthy Plate' "); $rr_row = mysql_fetch_array($rr); echo "".$rr_row['price'];  ?>/plate</p>
   <p>
   <input type="number" name="number" min=0 value="0" class = "opt" />
   </p>
@@ -91,10 +91,10 @@ mysql_select_db("hotel");
 
 
     <div class="room_border_1">
-    <form  method="POST">
+    <form action = "process_breakfast.php" method="POST">
     <p><input type="checkbox" name="selection" value="Denver Omlete" class = "squaredTwo"><h2>4.Denver Omelet</h2><h3>(Ham, green pepper, onion, tomato and Wisconsin cheddar cheese served with hash browns)</h3></p>
     <img src="../img/Breakfast/Denver Omelet.jpg">
-    <p>Price: plate</p>
+    <p>Price: <?php $rr = mysql_query("SELECT * FROM food_breakfast WHERE name ='Denver Omlete' "); $rr_row = mysql_fetch_array($rr); echo "".$rr_row['price'];  ?>/plate</p>
     <p>
     <input type="number" name="number" min=0 value="0" class = "opt" />
     </p>
@@ -104,10 +104,10 @@ mysql_select_db("hotel");
 
 
     <div class="room_border">
-    <form method="POST">
+    <form action = "process_breakfast.php" method="POST">
     <p><input type="checkbox" name="selection" value="CYO Omelet" class = "squaredTwo"><h2>5.CYO Omelet</h2><h3>(Your choice of 4 ingredients served with hash browns)</h3></p>
     <img src="../img/Breakfast/CYO Omelet.jpg">
-    <p>Price: plate</p>
+    <p>Price: <?php $rr = mysql_query("SELECT * FROM food_breakfast WHERE name ='CYO Omelet' "); $rr_row = mysql_fetch_array($rr); echo "".$rr_row['price'];  ?>/plate</p>
     <p>
     <input type="number" name="number" min=0 value="0" class = "opt" />
     </p>
@@ -117,10 +117,10 @@ mysql_select_db("hotel");
 
 
     <div class="room_border_1">
-    <form method="POST">
+    <form action = "process_breakfast.php" method="POST">
     <p><input type="checkbox" name="selection" value="Buffet A(Breakfast)" class = "squaredTwo"><h2>6.Buffet A(Breakfast)</h2><h3>(Assorted juices, fresh fruit medley, scrambled eggs, link sausage, hash browns and assorted muffins)</h3></p>
     <img src="../img/Breakfast/Buffet A.jpg">
-    <p>Price: plate</p>
+    <p>Price: <?php $rr = mysql_query("SELECT * FROM food_breakfast WHERE name ='Buffet A(Breakfast)' "); $rr_row = mysql_fetch_array($rr); echo "".$rr_row['price'];  ?>/plate</p>
     <p>
     <input type="number" name="number" min=0 value="0" class = "opt" />
     </p>
@@ -130,10 +130,10 @@ mysql_select_db("hotel");
 
 
     <div class="room_border">
-    <form method="POST">
+    <form action = "process_breakfast.php" method="POST">
     <p><input type="checkbox" name="selection" value="Buffet B(Breakfast)" class = "squaredTwo"><h2>7.Buffet B(Breakfast)</h2><h3>(Assorted juices, fresh fruit medley, French toast, cheddar sausage pan omelet and sliced ham)</h3></p>
     <img src="../img/Breakfast/Buffet B.jpg">
-    <p>Price: plate</p>
+    <p>Price: <?php $rr = mysql_query("SELECT * FROM food_breakfast WHERE name ='Buffet B(Breakfast)' "); $rr_row = mysql_fetch_array($rr); echo "".$rr_row['price'];  ?>/plate</p>
     <p>
     <input type="number" name="number" min=0 value="0" class = "opt" />
     </p>
@@ -143,10 +143,10 @@ mysql_select_db("hotel");
 
 
     <div class="room_border_1">
-    <form method="POST">
+    <form action = "process_breakfast.php" method="POST">
     <p><input type="checkbox" name="selection" value="Buffet C(Breakfast)" class = "squaredTwo"><h2>8.Buffet C(Breakfast)</h2><h3>(Assorted juices, warm assorted muffins, chorizo and pepper jack pan omelet, sausage, bacon and Santa Fe hash browns)</h3></p>
     <img src="../img/Breakfast/Buffet C.jpg">
-    <p>Price: plate</p>
+    <p>Price: p<?php $rr = mysql_query("SELECT * FROM food_breakfast WHERE name ='Buffet C(Breakfast)' "); $rr_row = mysql_fetch_array($rr); echo "".$rr_row['price'];  ?>/plate</p>
     <p>
     <input type="number" name="number" min=0 value="0" class = "opt" />
     </p>
