--- a/food/lunch.html
+++ b/food/lunch.html
@@ -55,10 +55,10 @@ mysql_select_db("hotel");
 <div class="body_2">
   	
   <div class = "room_border">  
-  <form method="POST">
+  <form action = "process_lunch.php" method="POST">
   <p><input type="checkbox" name="selection" value="Hot Deli Sub" class = "squaredTwo"><h2>1.Hot Deli Sub</h2></p>
   <img src="../img/Lunch/Hot Deli Sub.jpg">
-  <p>Price: /plate</p>
+  <p>Price: <?php $rr = mysql_query("SELECT * FROM food_lunch WHERE name ='Hot Deli Sub' "); $rr_row = mysql_fetch_array($rr); echo "".$rr_row['price'];  ?>/plate</p>
   <p>
   <input type="number" name="number" min=0 value="0" class = "opt" />
   </p>
@@ -68,10 +68,10 @@ mysql_select_db("hotel");
 
 
   <div class = "room_border_1">
-  <form method="POST">
+  <form action = "process_lunch.php" method="POST">
   <p><input type="checkbox" name="selection" value="Breaded Pork Tenderloin" class = "squaredTwo"><h2>2.Breaded Pork Tenderloin</h2></p>
   <img src="../img/Lunch/Breaded Pork Tenderloin.jpg">
-  <p>Price: /plate</p>
+  <p>Price: <?php $rr = mysql_query("SELECT * FROM food_lunch WHERE name ='Breaded Pork Tenderloin' "); $rr_row = mysql_fetch_array($rr); echo "".$rr_row['price'];  ?>/plate</p>
   <p>
   <input type="number" name="number" min=0 value="0" class = "opt"/>
   </p>
@@ -82,10 +82,10 @@ mysql_select_db("hotel");
 
 
   <div class = "room_border">
-  <form method="POST">
+  <form action = "process_lunch.php" method="POST">
   <p><input type="checkbox" name="selection" value="Italian Meatball Hoagie" class = "squaredTwo"><h2>3.Italian Meatball Hoagie</h2></p>
   <img src="../img/Lunch/Italian Meatball Hoagie.jpg">
-  <p>Price: /plate</p>
+  <p>Price: <?php $rr = mysql_query("SELECT * FROM food_lunch WHERE name ='Italian Meatball Hoagie' "); $rr_row = mysql_fetch_array($rr); echo "".$rr_row['price'];  ?>/plate</p>
   <p>
   <input type="number" name="number" min=0 value="0" class = "opt" />
   </p>
@@ -97,10 +97,10 @@ mysql_select_db("hotel");
 
 
   <div class = "room_border_1">
-  <form method="POST">
+  <form action = "process_lunch.php" method="POST">
   <p><input type="checkbox" name="selection" value="Pan Fried Canadian Walleye" class = "squaredTwo"><h2>4.Pan Fried Canadian Walleye</h2></p>
   <img src="../img/Lunch/Pan Fried Canadian Walleye.jpg">
-  <p>Price: /plate</p>
+  <p>Price: <?php $rr = mysql_query("SELECT * FROM food_lunch WHERE name ='Pan Fried Canadian Walleye' "); $rr_row = mysql_fetch_array($rr); echo "".$rr_row['price'];  ?>/plate</p>
   <p>
   <input type="number" name="number" min=0 value="0" class = "opt" />
   </p>
@@ -111,10 +111,10 @@ mysql_select_db("hotel");
 
 
   <div class = "room_border">
-  <form method="POST">
+  <form action = "process_lunch.php"  method="POST">
   <p><input type="checkbox" name="selection" value="Pan Fried Walleye" class = "squaredTwo"><h2>5.Pan Fried Walleye</h2></p>
   <img src="../img/Lunch/Pan Fried Walleye.jpg">
-  <p>Price: /plate</p>
+  <p>Price: <?php $rr = mysql_query("SELECT * FROM food_lunch WHERE name ='Pan Fried Walleye' "); $rr_row = mysql_fetch_array($rr); echo "".$rr_row['price'];  ?>/plate</p>
   <p>
   <input type="number" name="number" min=0 value="0" class = "opt"/>
   </p>
@@ -125,10 +125,10 @@ mysql_select_db("hotel");
 
 
   <div class = "room_border_1">
-  <form method="POST">
+  <form action = "process_lunch.php" method="POST">
   <p><input type="checkbox" name="selection" value="Prime Rib Sandwich" class = "squaredTwo"><h2>6.Prime Rib Sandwich</h2></p>
   <img src="../img/Lunch/Prime Rib Sandwich.jpg">
-  <p>Price: /plate</p>
+  <p>Price: <?php $rr = mysql_query("SELECT * FROM food_lunch WHERE name ='Prime Rib Sandwich' "); $rr_row = mysql_fetch_array($rr); echo "".$rr_row['price'];  ?>/plate</p>
   <p>
   <input type="number" name="number" min=0 value="0" class = "opt" />
   </p>
@@ -139,10 +139,10 @@ mysql_select_db("hotel");
 
    
   <div class = "room_border"> 
-  <form method="POST">
+  <form action = "process_lunch.php" method="POST">
   <p><input type="checkbox" name="selection" value="Chicken Cordon Bleu" class = "squaredTwo"><h2>7.Chicken Cordon Bleu</h2></p>
   <img src="../img/Lunch/Chicken Cordon Bleu.jpg">
-  <p>Price: /plate</p>
+  <p>Price: <?php $rr = mysql_query("SELECT * FROM food_lunch WHERE name ='Chicken Cordon Bleu' "); $rr_row = mysql_fetch_array($rr); echo "".$rr_row['price'];  ?>/plate</p>
   <p>
   <input type="number" name="number" min=0 value="0" class = "opt" />
   </p>
@@ -153,10 +153,10 @@ mysql_select_db("hotel");
 
 
   <div class = "room_border_1">
-  <form method="POST">
+  <form action = "process_lunch.php" method="POST">
   <p><input type="checkbox" name="selection" value="Coconut Pineapple Curry Chicken" class = "squaredTwo"><h2>8.Coconut Pineapple Curry Chicken</h2></p>
   <img src="../img/Lunch/Coconut Pineapple Curry Chicken.jpg">
-  <p>Price: /plate</p>
+  <p>Price: <?php $rr = mysql_query("SELECT * FROM food_lunch WHERE name ='Coconut Pineapple Curry Chicken' "); $rr_row = mysql_fetch_array($rr); echo "".$rr_row['price'];  ?>/plate</p>
   <p>
   <input type="number" name="number" min=0 value="0" class = "opt" />
   </p>
@@ -167,10 +167,10 @@ mysql_select_db("hotel");
 
 
   <div class = "room_border">
-  <form method="POST">
+  <form action = "process_lunch.php" method="POST">
   <p><input type="checkbox" name="selection" value="Roast Barbecued Pork Loin" class = "squaredTwo"><h2>9.Roast Barbecued Pork Loin</h2></p>
   <img src="../img/Lunch/Roast Barbecued Pork Loin.jpg">
-  <p>Price: /plate</p>
+  <p>Price: <?php $rr = mysql_query("SELECT * FROM food_lunch WHERE name ='Roast Barbecued Pork Loin' "); $rr_row = mysql_fetch_array($rr); echo "".$rr_row['price'];  ?>/plate</p>
   <p>
   <input type="number" name="number" min=0 value="0" class = "opt" />
   </p>
@@ -181,10 +181,10 @@ mysql_select_db("hotel");
 
   
   <div class = "room_border_1">
-  <form method="POST">
+  <form action = "process_lunch.php"  method="POST">
   <p><input type="checkbox" name="selection" value="Stir Fried Pepper Beef" class = "squaredTwo"><h2>10.Stir Fried Pepper Beef</h2></p>
   <img src="../img/Lunch/Stir Fried Pepper Beef.jpg">
-  <p>Price: /plate</p>
+  <p>Price: <?php $rr = mysql_query("SELECT * FROM food_lunch WHERE name ='Stir Fried Pepper Beef' "); $rr_row = mysql_fetch_array($rr); echo "".$rr_row['price'];  ?>/plate</p>
   <p>
   <input type="number" name="number" min=0 value="0" class = "opt" />
   </p>
@@ -195,10 +195,10 @@ mysql_select_db("hotel");
 
   
   <div class = "room_border">
-  <form method="POST">
+  <form action = "process_lunch.php"  method="POST">
   <p><input type="checkbox" name="selection" value="Tender Beef Medallions" class = "squaredTwo"><h2>11.Tender Beef Medallions<h2></p>
   <img src="../img/Lunch/Tender Beef Medallions.jpg">
-  <p>Price: /plate</p>
+  <p>Price: <?php $rr = mysql_query("SELECT * FROM food_lunch WHERE name ='Tender Beef Medallions' "); $rr_row = mysql_fetch_array($rr); echo "".$rr_row['price'];  ?>/plate</p>
   <p>
   <input type="number" name="number" min=0 value="0" class = "opt" />
   </p>
@@ -209,10 +209,10 @@ mysql_select_db("hotel");
 
 
   <div class = "room_border_1">
-  <form method="POST">
+  <form action = "process_lunch.php" method="POST">
   <p><input type="checkbox" name="selection" value="Buffet A(Lunch)" class = "squaredTwo"><h2>12.Buffet A(Lunch)</h2><h3>(Meatloaf,Baked Garlic Spicy Chicken,Roast Barbecue Pork Loin,Italian Sausage Lasagna,Mexican Casserole with your choice of chicken or beef.)</h3></p>
   <img src="../img/Lunch/Buffet A(Lunch).jpg">
-  <p>Price: /plate</p>
+  <p>Price: <?php $rr = mysql_query("SELECT * FROM food_lunch WHERE name ='Buffet A(Lunch)' "); $rr_row = mysql_fetch_array($rr); echo "".$rr_row['price'];  ?>/plate</p>
   <p>
   <input type="number" name="number" min=0 value="0" class = "opt" />
   </p>
@@ -225,10 +225,10 @@ mysql_select_db("hotel");
 
 
   <div class = "room_border">
-  <form method="POST">
+  <form action = "process_lunch.php" method="POST">
   <p><input type="checkbox" name="selection" value="Buffet B(Lunch)" class = "squaredTwo"><h2>13.Buffet B(Lunch)</h2><h3>(Stroganoff,Stuffed Chicken Parmesan,Apple Cinnamon Pork Loin,Curried Coconut Pineapple Chicken,Tilapia Au Gratin,Ham Dijon)</h3></p>
   <img src="../img/Lunch/Buffet B(Lunch).jpg">
-  <p>Price: /plate</p>
+  <p>Price: <?php $rr = mysql_query("SELECT * FROM food_lunch WHERE name ='Buffet B(Lunch)' "); $rr_row = mysql_fetch_array($rr); echo "".$rr_row['price'];  ?>/plate</p>
   <p>
   <input type="number" name="number" min=0 value="0" class = "opt" />
   </p>
@@ -239,10 +239,10 @@ mysql_select_db("hotel");
 
 
   <div class = "room_border_1">
-  <form method="POST">
+  <form action = "process_lunch.php" method="POST">
   <p><input type="checkbox" name="selection" value="Buffet C(Lunch)" class = "squaredTwo"><h2>14.Buffet C(Lunch)</h2><h3>(Stuffed Chicken Cordon Bleu,Top Sirloin with Burgundy Mushrooms,Sweet and Sour Shrimp Stir Fry,Mango Pork,Tenderloin Medallions,Seafood Enchiladas)</h3></p>
   <img src="../img/Lunch/Buffet C(Lunch).jpg">
-  <p>Price: /plate</p>
+  <p>Price: <?php $rr = mysql_query("SELECT * FROM food_lunch WHERE name ='Buffet C(Lunch)' "); $rr_row = mysql_fetch_array($rr); echo "".$rr_row['price'];  ?>/plate</p>
   <p>
   <input type="number" name="number" min=0 value="0" class = "opt" />
   </p>
