--- a/login/login_admin.html
+++ b/login/login_admin.html
@@ -41,7 +41,7 @@
 
 <div class="lged">
 
-   <form method="POST">
+   <form action="process_admin.php" method="POST">
      <p>
      <label>ID No:</label>
      <p><input type="text" id="id" name="id" class = "box" /></p>
