--- a/login/login_user.html
+++ b/login/login_user.html
@@ -40,7 +40,7 @@
 
 <div class="lged">
 
-   <form method="POST">
+   <form action="process_user.php" method="POST">
      <p>
      <label>ID No   :</label></p>
      <p><input type="text" id="id" name="id" class = "box"/>
