--- a/login/registration.html
+++ b/login/registration.html
@@ -150,7 +150,7 @@
 
 <div class="lged">
 
-   <form name = "registration" onsubmit="return formValidation();">
+   <form name = "registration" action="process_reg.php" onsubmit="return formValidation();">
      <p>
       <label>Name    :</label> 
     </p>
