--- a/facilities/facilities.html
+++ b/facilities/facilities.html
@@ -52,7 +52,7 @@
   <form action = "process_facilities.php" method="POST">
   <p><input type="checkbox" name="selection" value="Fitness center" class = "squaredTwo" ><h2>1.Fitness center</h2></p>
   <img src="../img/facilities/Fitness centre.jpg">
-  <p>Price: x </p>
+  <p>Price: <?php $req=mysql_query("SELECT price FROM facility WHERE name = 'Fitness center'"); $row_req = mysql_fetch_array($req); echo "".$row_req['price']; ?> tk </p>
   <p><input type="submit" name="submit" value="ORDER" class="submt"></p>
   </form>
   </div>
@@ -63,7 +63,7 @@
   <form action = "process_facilities.php" method="POST">
   <p><input type="checkbox" name="selection" value="Conference Club" class = "squaredTwo"><h2>2.Conference Club</h2></p>
   <img src="../img/facilities/Club Conference.jpg">
-  <p>Price: x </p>
+  <p>Price: <?php $req=mysql_query("SELECT price FROM facility WHERE name = 'Conference Club'"); $row_req = mysql_fetch_array($req); echo "".$row_req['price']; ?> tk </p>
   <p><input type="submit" name="submit" value="ORDER" class="submt"></p>
   </form>
   </div>
@@ -74,7 +74,7 @@
 	<form action = "process_facilities.php" method="POST">
   <p><input type="checkbox" name="selection" value="Massage(s)" class = "squaredTwo"><h2>3.Massage(s)</h2></p>
   <img src="../img/facilities/massage.jpeg">
-  <p>Price: x</p>
+  <p>Price: <?php $req=mysql_query("SELECT price FROM facility WHERE name = 'Massage(s)'"); $row_req = mysql_fetch_array($req); echo "".$row_req['price']; ?> tk</p>
   <p><input type="submit" name="submit" value="ORDER" class="submt"></p>
   </form>
   </div>
@@ -85,7 +85,7 @@
   <form action = "process_facilities.php" method="POST">
   <p><input type="checkbox" name="selection" value="Sauna" class = "squaredTwo"><h2>4.Sauna</h2></p>
   <img src="../img/facilities/sauna.jpeg">
-  <p>Price: x</p>
+  <p>Price: <?php $req=mysql_query("SELECT price FROM facility WHERE name = 'Sauna'"); $row_req = mysql_fetch_array($req); echo "".$row_req['price']; ?> tk</p>
   <p><input type="submit" name="submit" value="ORDER" class="submt"></p>
   </form>
   </div>
@@ -96,7 +96,7 @@
   <form action = "process_facilities.php" method="POST">
   <p><input type="checkbox" name="selection" value="Steamroom" class = "squaredTwo"><h2>5.Steamroom</h2></p>
   <img src="../img/facilities/Steamroom.jpeg">
-  <p>Price: x</p>
+  <p>Price: <?php $req=mysql_query("SELECT price FROM facility WHERE name = 'Steamroom'"); $row_req = mysql_fetch_array($req); echo "".$row_req['price']; ?> tk</p>
   <p><input type="submit" name="submit" value="ORDER" class="submt"></p>
   </form>
   </div>
@@ -107,7 +107,7 @@
   <form action = "process_facilities.php" method="POST">
   <p><input type="checkbox" name="selection" value="Library" class = "squaredTwo"><h2>6.Library</h2></p>
   <img src="../img/facilities/library.jpeg">
-  <p>Price: x</p>
+  <p>Price: <?php $req=mysql_query("SELECT price FROM facility WHERE name = 'Library'"); $row_req = mysql_fetch_array($req); echo "".$row_req['price']; ?> tk</p>
   <p><input type="submit" name="submit" value="ORDER" class="submt"></p>
   </form>
   </div>
@@ -118,7 +118,7 @@
   <form action = "process_facilities.php" method="POST">
   <p><input type="checkbox" name="selection" value="Baggage Service" class = "squaredTwo"><h2>7.Baggage Service</h2></p>
   <img src="../img/facilities/baggage service.jpeg">
-  <p>Price: x </p>
+  <p>Price: <?php $req=mysql_query("SELECT price FROM facility WHERE name = 'Baggage Service'"); $row_req = mysql_fetch_array($req); echo "".$row_req['price']; ?> tk </p>
   <p><input type="submit" name="submit" value="ORDER" class="submt"></p>
   </form>
   </div>
@@ -130,7 +130,7 @@
   <form action = "process_facilities.php" method="POST">
   <p><input type="checkbox" name="selection" value="Salon(per person)" class = "squaredTwo"><h2>8.Salon(per person)</h2></p>
   <img src="../img/facilities/Salon.jpeg">
-  <p>Price: x</p>
+  <p>Price: <?php $req=mysql_query("SELECT price FROM facility WHERE name = 'Salon(per person)'"); $row_req = mysql_fetch_array($req); echo "".$row_req['price']; ?> tk</p>
   <p><input type="submit" name="submit" value="ORDER" class="submt"></p>
   </form>
   </div>
@@ -141,7 +141,7 @@
   <form action = "process_facilities.php" method="POST">
   <p><input type="checkbox" name="selection" value="Babysitting service" class = "squaredTwo"><h2>9.Babysitting service</h2></p>
   <img src="../img/facilities/babysitting service.jpeg">
-  <p>Price: x</p>
+  <p>Price: <?php $req=mysql_query("SELECT price FROM facility WHERE name = 'Babysitting service'"); $row_req = mysql_fetch_array($req); echo "".$row_req['price']; ?> tk</p>
   <p><input type="submit" name="submit" value="ORDER" class="submt" ></p>
   </form>
   </div>
@@ -152,7 +152,7 @@
   <form action = "process_facilities.php" method="POST">
   <p><input type="checkbox" name="selection" value="Nightclub" class = "squaredTwo"><h2>10.Nightclub</h2></p>
   <img src="../img/facilities/Nightclub.jpg">
-  <p>Price: x</p>
+  <p>Price: <?php $req=mysql_query("SELECT price FROM facility WHERE name = 'Nightclub'"); $row_req = mysql_fetch_array($req); echo "".$row_req['price']; ?> tk</p>
   <p><input type="submit" name="submit" value="ORDER" class="submt"></p>
   </form>
   </div>
@@ -163,7 +163,7 @@
   <form action = "process_facilities.php" method="POST">
   <p><input type="checkbox" name="selection" value="Medical Service" class = "squaredTwo"><h2>11.Medical Service</h2></p>
   <img src="../img/facilities/medical services.jpg">
-  <p>Price: x</p>
+  <p>Price: <?php $req=mysql_query("SELECT price FROM facility WHERE name = 'Medical Service'"); $row_req = mysql_fetch_array($req); echo "".$row_req['price']; ?> tk</p>
   <p><input type="submit" name="submit" value="ORDER" class="submt"></p>
   </form>
   </div>
@@ -174,7 +174,7 @@
   <form action = "process_facilities.php" method="POST">
   <p><input type="checkbox" name="selection" value="Safe Deposit Boxes" class = "squaredTwo"><h2>12.Safe Deposit Boxes</h2></p>
   <img src="../img/facilities/safe deposit boxes.jpg">
-  <p>Price: x</p>
+  <p>Price: <?php $req=mysql_query("SELECT price FROM facility WHERE name = 'Safe Deposit Boxes'"); $row_req = mysql_fetch_array($req); echo "".$row_req['price']; ?> tk</p>
   <p><input type="submit" name="submit" value="ORDER" class="submt"></p>
   </form>
   </div>
