--- a/food/dinner.html
+++ b/food/dinner.html
@@ -52,10 +52,10 @@ mysql_select_db("hotel");
 <div class="body_2">
   
   <div class = "room_border">	
-  <form  method="POST">
+  <form action = "process_dinner.php"  method="POST">
   <p><input type="checkbox" name="selection" value="Baked Salmon with lemon dill butter" class = "squaredTwo"><h2>1.Baked Salmon with lemon dill butter</h2></p>
   <img src="../img/Dinner/Baked Salmon with lemon dill butter.jpg">
-  <p>Price: /plate</p>
+  <p>Price: <?php $rr = mysql_query("SELECT * FROM food_dinner WHERE name ='Baked Salmon with lemon dill butter' "); $rr_row = mysql_fetch_array($rr); echo "".$rr_row['price'];  ?>/plate</p>
   <p>
   <input type="number" name="number" min=0 value="0" class = "opt" />
   </p>
@@ -65,10 +65,10 @@ mysql_select_db("hotel");
 
 
   <div class = "room_border_1">
-  <form method="POST">
+  <form action = "process_dinner.php" method="POST">
   <p><input type="checkbox" name="selection" value="Chicken Parmesan" class = "squaredTwo"><h2>2.Chicken Parmesan</h2></p>
    <img src="../img/Dinner/Chicken Parmesan.jpg">
-  <p>Price: /plate</p>
+  <p>Price: <?php $rr = mysql_query("SELECT * FROM food_dinner WHERE name ='Chicken Parmesan' "); $rr_row = mysql_fetch_array($rr); echo "".$rr_row['price'];  ?>/plate</p>
   <p>
   <input type="number" name="number" min=0 value="0" class = "opt" />
   </p>
@@ -78,10 +78,10 @@ mysql_select_db("hotel");
 
 
   <div class = "room_border">
-  <form method="POST">
+  <form action = "process_dinner.php" method="POST">
   <p><input type="checkbox" name="selection" value="Chicken Rosemary" class = "squaredTwo"><h2>3.Chicken Rosemary</h2></p>
    <img src="../img/Dinner/Chicken Rosemary.jpeg">
-  <p>Price: /plate</p>
+  <p>Price: <?php $rr = mysql_query("SELECT * FROM food_dinner WHERE name ='Chicken Rosemary' "); $rr_row = mysql_fetch_array($rr); echo "".$rr_row['price'];  ?>/plate</p>
   <p>
   <input type="number" name="number" min=0 value="0" class = "opt" />
   </p>
@@ -92,10 +92,10 @@ mysql_select_db("hotel");
 
  
   <div class = "room_border_1">
-  <form method="POST">
+  <form action = "process_dinner.php" method="POST">
   <p><input type="checkbox" name="selection" value="Cordon Bleu" class = "squaredTwo"><h2>4.Cordon Bleu</h2></p>
    <img src="../img/Dinner/Cordon Bleu.jpg">
-  <p>Price: /plate</p>
+  <p>Price: <?php $rr = mysql_query("SELECT * FROM food_dinner WHERE name ='Cordon Bleu' "); $rr_row = mysql_fetch_array($rr); echo "".$rr_row['price'];  ?>/plate</p>
   <p>
   <input type="number" name="number" min=0 value="0" class = "opt" />
   </p>
@@ -107,11 +107,11 @@ mysql_select_db("hotel");
 
 
   <div class = "room_border">
-  <form method="POST">
+  <form action = "process_dinner.php" method="POST">
   <p><input type="checkbox" name="selection" value="Cranberry and Wild Rice Stuffed Chicken Breast" class = "squaredTwo">
   <h2>5.Cranberry and Wild </h2></p>
    <img src="../img/Dinner/Cranberry and Wild Rice Stuffed Chicken Breast.jpg">
-  <p>Price: /plate</p>
+  <p>Price: <?php $rr = mysql_query("SELECT * FROM food_dinner WHERE name ='Cranberry and Wild Rice Stuffed Chicken Breast' "); $rr_row = mysql_fetch_array($rr); echo "".$rr_row['price'];  ?>/plate</p>
   <p>
   <input type="number" name="number" min=0 value="0" class = "opt" />
   </p>
@@ -122,10 +122,10 @@ mysql_select_db("hotel");
 
 
   <div class = "room_border_1">
-  <form method="POST">
+  <form action = "process_dinner.php" method="POST">
   <p><input type="checkbox" name="selection" value="Pan Fried Canadian Walleye" class = "squaredTwo"><h2>6.Pan Fried Canadian Walleye</h2></p>
    <img src="../img/Dinner/Pan Fried Canadian Walleye.jpg">
-  <p>Price: /plate</p>
+  <p>Price: <?php $rr = mysql_query("SELECT * FROM food_dinner WHERE name ='Pan Fried Canadian Walleye' "); $rr_row = mysql_fetch_array($rr); echo "".$rr_row['price'];  ?>/plate</p>
   <p>
   <input type="number" name="number" min=0 value="0" class = "opt" />
   </p>
@@ -137,10 +137,10 @@ mysql_select_db("hotel");
 
 
   <div class = "room_border">
-  <form method="POST">
+  <form action = "process_dinner.php" method="POST">
   <p><input type="checkbox" name="selection" value="Stuffed Pork Chop" class = "squaredTwo"><h2>7.Stuffed Pork Chop</h2></p>
    <img src="../img/Dinner/Stuffed Pork Chop.jpg">
-  <p>Price: /plate</p>
+  <p>Price: <?php $rr = mysql_query("SELECT * FROM food_dinner WHERE name ='Stuffed Pork Chop' "); $rr_row = mysql_fetch_array($rr); echo "".$rr_row['price'];  ?>/plate</p>
   <p>
   <input type="number" name="number" min=0 value="0" class = "opt" />
   </p>
@@ -151,10 +151,10 @@ mysql_select_db("hotel");
 
 
   <div class = "room_border_1">
-  <form method="POST">
+  <form action = "process_dinner.php"  method="POST">
   <p><input type="checkbox" name="selection" value="Tilapia with Crab au Gratin" class = "squaredTwo"><h2>8.Tilapia with Crab au Gratin</h2></p>
    <img src="../img/Dinner/Tilapia with Crab au Gratin.jpg">
-  <p>Price: /plate</p>
+  <p>Price: <?php $rr = mysql_query("SELECT * FROM food_dinner WHERE name ='Tilapia with Crab au Gratin' "); $rr_row = mysql_fetch_array($rr); echo "".$rr_row['price'];  ?>/plate</p>
   <p>
   <input type="number" name="number" min=0 value="0" class = "opt" />
   </p>
@@ -165,10 +165,10 @@ mysql_select_db("hotel");
 
 
   <div class = "room_border">
-  <form method="POST">
+  <form action = "process_dinner.php"  method="POST">
   <p><input type="checkbox" name="selection" value="Buffet A(Dinner)" class = "squaredTwo"><h2>9.Buffer A(Dinner)</h2><h3>(Stuffed Chicken Parmesan, Smoked Ham Dijon, Tender Beef Tips and Tilapia Au Gratin)</h3></p>
    <img src="../img/Dinner/Buffet A(Dinner).jpg">
-  <p>Price: /plate</p>
+  <p>Price: <?php $rr = mysql_query("SELECT * FROM food_dinner WHERE name ='Buffet A(Dinner)' "); $rr_row = mysql_fetch_array($rr); echo "".$rr_row['price'];  ?>/plate</p>
   <p>
   <input type="number" name="number" min=0 value="0" class = "opt" />
   </p>
@@ -179,10 +179,10 @@ mysql_select_db("hotel");
 
 
   <div class = "room_border_1">
-  <form method="POST">
+  <form action = "process_dinner.php" method="POST">
   <p><input type="checkbox" name="selection" value="Buffet B(Dinner)" class = "squaredTwo"><h2>10.Buffer B(Dinner)</h2><h3>(Chicken Cordon Bleu, Roast Barbecued Pork Loin, Top Sirloin with Burgundy Mushrooms,Seafood Newburg, Chicken Rosemary)</h3></p>
    <img src="../img/Dinner/Buffet B(Dinner).jpg">
-  <p>Price: /plate</p>
+  <p>Price: <?php $rr = mysql_query("SELECT * FROM food_dinner WHERE name ='Buffet B(Dinner)' "); $rr_row = mysql_fetch_array($rr); echo "".$rr_row['price'];  ?>/plate</p>
   <p>
   <input type="number" name="number" min=0 value="0" class = "opt" />
   </p>
@@ -194,10 +194,10 @@ mysql_select_db("hotel");
 
 
   <div class = "room_border">
-  <form method="POST">
+  <form action = "process_dinner.php" method="POST">
   <p><input type="checkbox" name="selection" value="Buffet C(Dinner)" class = "squaredTwo"><h2>11.Buffer C(Dinner)</h2><h3>(Chorizo stuffed Mexican Chicken, Brandied Cinnamon Apple Pork, Stuffed Tenderloin Medallions and Crab Stuffed Shrimp)</h3></p>
    <img src="../img/Dinner/Buffet C(Dinner).jpg">
-  <p>Price: /plate</p>
+  <p>Price: <?php $rr = mysql_query("SELECT * FROM food_dinner WHERE name ='Buffet C(Dinner)' "); $rr_row = mysql_fetch_array($rr); echo "".$rr_row['price'];  ?>/plate</p>
   <p>
   <input type="number" name="number" min=0 value="0" class = "opt" />
   </p>
